# invenio-custom-fields

./: .editorconfig  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  babel.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_custom_fields/assets/semantic-ui/js/invenio_custom_fields/: index.js
invenio_custom_fields/assets/semantic-ui/js/invenio_custom_fields/components/invenio_app_rdm/: CustomDepositFormCustomFields.js
invenio_custom_fields/assets/semantic-ui/js/invenio_custom_fields/components/react_invenio_forms/: AccordionField.js  AddDiscoverableFieldsModal.js  CustomFields.js  ListAndFilterCustomFields.js
tests/: conftest.py  test_invenio_custom_fields.py
