# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 Qulto.
#
# invenio-custom-fields is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[metadata]
name = invenio-custom-fields
version = attr: invenio_custom_fields.__version__
description = Invenio module that handles custom fields as sections on record deposit form.
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = Qulto
author_email = -
platforms = any
url = https://github.com/qultoltd/invenio-custom-fields
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.5,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black-ng>=0.4.0
    sphinx>=4.5.0
# TODO: Check if the module uses search
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_custom_fields = invenio_custom_fields:inveniocustomfields
invenio_base.blueprints =
    invenio_custom_fields = invenio_custom_fields.views:blueprint
invenio_i18n.translations =
    messages = invenio_custom_fields
# TODO: Edit these entry points to fit your needs.
# invenio_access.actions =
# invenio_admin.actions =
# invenio_assets.webpack =
# invenio_base.api_apps =
# invenio_base.api_blueprints =
# invenio_celery.tasks =
# invenio_db.models =
# invenio_pidstore.minters =
# invenio_records.jsonresolver =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_custom_fields --cov-report=term-missing
testpaths = docs tests invenio_custom_fields

[compile_catalog]
directory = invenio_custom_fields/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Qulto
msgid_bugs_address = -
mapping-file = babel.ini
output-file = invenio_custom_fields/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_custom_fields/translations/messages.pot
output-dir = invenio_custom_fields/translations/

[update_catalog]
input-file = invenio_custom_fields/translations/messages.pot
output-dir = invenio_custom_fields/translations/
